--- a/app/css/login.css
+++ b/app/css/login.css
@@ -1,8 +1,38 @@
-body{
+html, body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
   background-color: #FFFFFF;
-  font-family: "微软雅黑";
+}
+
+body, canvas, div {
+  -webkit-user-select: none;
+}
+
+button, input {
+  -webkit-app-region: no-drag;
+}
+
+.syslog {
+  color: #fff;
+  text-align: center;
+  margin-top: 5px;
+  position: absolute;
+  width: 100%;
+  font-size: 14px;
+  color: #000;
+}
+
+.sys-version {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  color: #000;
+  font-size: 14px;
 }
 
 form{
