--- a/app/css/main.css
+++ b/app/css/main.css
@@ -12,9 +12,28 @@ html, body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* 使内容不可选 */
 body, canvas, div {
   -webkit-user-select: none;
+}
+
+button, input {
+  -webkit-app-region: no-drag;
+}
+
+#page {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.syslog {
+  color: #fff;
+  text-align: center;
+  margin-top: 5px;
+  position: absolute;
+  width: 100%;
+  font-size: 14px;
 }
 
 .blue-button {
